# solarchem-corpus

./: CITATION.cff  DataDemo.json  README.md  codemeta.json  pyproject.toml  requirements.txt
Annotation pipeline/: README.md  annotationScript.ipynb
Annotation pipeline/code/: test_input.json  test_output.json
SolarAnno/annotation/: new_annotation_14.json  new_annotation_15.json  new_annotation_30.json  new_annotation_4.json
SolarAnno/code/: pyproject.toml
SolarAnno/code/solaranno/: annotator.py
SolarAnno/domain_expert_annotation/: 10.1002solr.202100872.json  10.1016_j.apsusc.2021.152315.json  10.1016j.apcatb.2021.121026.json  10.1016j.apcatb.2022.121069.json  10.1016j.jcis.2021.12.197.json  10.1016j.jcou.2021.101864.json  10.1016j.jphotochem.2021.113754.json  10.1016j.jssc.2022.122878.json  10.3389fchem.2021.804204.json  10.3390_nano12010127.json  10.3390su14010374.json
SolarAnno/extracted_text/: new_paper_4.json  new_paper_5.json
SolarChem-Annotation-Pipeline/: README.md
SolarChem-Dataset/SolarChemQA-Dataset-Updated/: ground_truth.json  newannotatorScript.py
SolarChem-Dataset/SolarChemQA-Dataset-json/: domain_expert_annotation_targets.json
SolarChem-Dataset/SolarChemQA_Filter_294/: paper_10.json  paper_1024.json  paper_1025.json  paper_1035.json  paper_1043.json  paper_1047.json  paper_1059.json  paper_1060.json  paper_107.json  paper_1071.json  paper_1107.json  paper_1135.json  paper_1146.json  paper_1149.json  paper_1175.json  paper_1177.json  paper_1186.json  paper_119.json  paper_1205.json  paper_122.json  paper_1221.json  paper_1222.json  paper_1242.json  (+57 more)
SolarChem-Generation-Pipeline/: final_result_avg.json  final_result_per_file.json
SolarChemQA-Dataset/: README.md
SolarQA-pipeline/: Eval_IR.py  Eval_RAG.py
Task-1-information-retrieval/: Eval_IR.py
(+8525 files in other folders)
