[project]
name = "solarchemqa"
version = "1.0.2"
description = "A corpus and benchmark for validating QA over solar chemistry papers"
authors = [
    {name = "Ziyuan Wang", email = "ziyuan.wang@upm.es"},
    {name = "Daniel Garijo", email = "daniel.garijo@upm.es"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyyaml==6.0.2",
    "pydantic==2.10.6",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "matplotlib==3.9.4",
    "thefuzz==0.22.1",
    "fuzzywuzzy==0.18.0",
    "python-Levenshtein==0.26.1",
    "rank-bm25==0.2.2",
    "flashrank==0.2.10",
    "faiss-cpu==1.9.0",
    "scikit-learn==1.6.1",
    "sentence-transformers==3.4.1",
    "agno==1.1.1",
    "langchain==0.3.18",
    "langchain-core==0.3.35",
    "langchain-community==0.3.17",
    "langchain-text-splitters==0.3.6",
    "langchain-experimental==0.3.4",
    "langchain-openai==0.3.6",
    "langchain-ollama==0.2.3",
    "langchain-google-genai==2.0.9",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
