[project]
name = "solaranno"
version = "0.2.0"
description = ""
authors = [
    {name = "ClarkWang",email = "ziyuan.wang@upm.es"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-google-genai (>=2.0.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.10.6"
langchain = "0.3.18"
langchain-community = "0.3.17"
langchain-core = "0.3.35"
langchain-text-splitters = "0.3.6"